log
Wed, Apr 30, 2025  2:45:33 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Sat, May  3, 2025  9:50:35 PM: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
ee4f3bf
Sun, May  4, 2025  3:54:30 PM: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
 tests:  5|7
total_score: 5/70
5210ba4
Sun, May  4, 2025  3:58:42 PM: 
 treemap.c | 54 +++++++++++++-----------------------------------------
 1 file changed, 13 insertions(+), 41 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3155872
Sun, May  4, 2025  3:59:07 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
C:\Users\pa447\AppData\Local\Temp\ccNOe2jr.o: In function `insert_test1':
C:\Users\pa447\OneDrive\Escritorio\Uni\Progra\Labs\lab4\lab-4-rboles-binarios-de-b-squeda-Matunga-C/test.c:175: undefined reference to `insertTreeMap'
C:\Users\pa447\AppData\Local\Temp\ccNOe2jr.o: In function `insert_test2':
C:\Users\pa447\OneDrive\Escritorio\Uni\Progra\Labs\lab4\lab-4-rboles-binarios-de-b-squeda-Matunga-C/test.c:192: undefined reference to `insertTreeMap'
collect2.exe: error: ld returned 1 exit status
e74e2d7
Sun, May  4, 2025  3:59:23 PM: 
Compilation failed
C:\Users\pa447\AppData\Local\Temp\ccrt76Lp.o: In function `insert_test1':
C:\Users\pa447\OneDrive\Escritorio\Uni\Progra\Labs\lab4\lab-4-rboles-binarios-de-b-squeda-Matunga-C/test.c:175: undefined reference to `insertTreeMap'
C:\Users\pa447\AppData\Local\Temp\ccrt76Lp.o: In function `insert_test2':
C:\Users\pa447\OneDrive\Escritorio\Uni\Progra\Labs\lab4\lab-4-rboles-binarios-de-b-squeda-Matunga-C/test.c:192: undefined reference to `insertTreeMap'
collect2.exe: error: ld returned 1 exit status
cdae03c
Sun, May  4, 2025  4:00:50 PM: 
 treemap.c | 24 +++++++++++++++++-------
 1 file changed, 17 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
cae08c7
Sun, May  4, 2025  4:01:11 PM: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|6
total_score: 15/70
190bcdd
Sun, May  4, 2025  9:19:12 PM: 
 treemap.c | 69 ++++++++++++++++++++++++++++++++++++++++++++++++---------------
 1 file changed, 53 insertions(+), 16 deletions(-)
 tests:  13|5
total_score: 25/70
a181729
Sun, May  4, 2025 11:02:32 PM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
f768b1e
Sun, May  4, 2025 11:06:51 PM: 
 treemap.c | 59 ++++++++++++++++++++++++++++++++++++++++++++++-------------
 1 file changed, 46 insertions(+), 13 deletions(-)
 tests:  18|3
total_score: 40/70
a2751bb
Sun, May  4, 2025 11:10:48 PM: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:165:16: error: unused variable 'current' [-Werror=unused-variable]
     TreeNode * current = tree->root; // Inicializa el nodo actual como la raíz
                ^~~~~~~
cc1.exe: all warnings being treated as errors
553a065
Sun, May  4, 2025 11:12:42 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:166:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return current; // Retorna el nodo raíz
            ^~~~~~~
cc1.exe: all warnings being treated as errors
4b02028
Sun, May  4, 2025 11:13:17 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 55/70
f3ef43d
Sun, May  4, 2025 11:15:10 PM: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
55724e0
Sun, May  4, 2025 11:18:48 PM: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
f5538cd
Sun, May  4, 2025 11:20:27 PM: 
 treemap.c | 21 ++++++++++++---------
 1 file changed, 12 insertions(+), 9 deletions(-)
 tests:  25|1
total_score: 60/70
2497d7b
